test/e2e/testdata/dynamic-resolver-original-host-accesslog.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dynamic-resolver-accesslog-gtw
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: {GATEWAY_CLASS_NAME}
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: dynamic-resolver-accesslog
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: dynamic-resolver-accesslog
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  telemetry:
    accessLog:
      settings:
        - format:
            type: JSON
            json:
              x-request-id: "%REQ(X-REQUEST-ID)%"
              http.host: "%REQ(HOST)%"
              http.original_host: "%REQ(X-ENVOY-ORIGINAL-HOST)%"
          matches:
            - "'x-envoy-logged' in request.headers"
          sinks:
            - type: OpenTelemetry
              openTelemetry:
                backendRefs:
                  - name: otel-collector
                    namespace: monitoring
                    port: 4317
                resources:
                  k8s.cluster.name: "envoy-gateway"
  shutdown:
    drainTimeout: 5s
    minDrainDuration: 1s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: dynamic-resolver-accesslog-ctp
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dynamic-resolver-accesslog-gtw
  headers:
    enableEnvoyHeaders: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dynamic-resolver-original-host-accesslog
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: dynamic-resolver-accesslog-gtw
  hostnames:
    - www.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /original-host
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: test-service-foo.gateway-conformance-infra.svc.cluster.local
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-dynamic-resolver-accesslog
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-dynamic-resolver-accesslog
  namespace: gateway-conformance-infra
spec:
  type: DynamicResolver
---
apiVersion: v1
kind: Service
metadata:
  name: test-service-foo
  namespace: gateway-conformance-infra
spec:
  selector:
    app: infra-backend-v1
  ports:
    - protocol: TCP
      port: 80
      name: http11
      targetPort: 3000
